# ecomm-prod-coordinator

./: .gitignore  get_lib_version.py  main.py  pyproject.toml  requirements.txt  scrapper_ui.py
.github/workflows/: deploy.yml
data/: product_reviews.csv
infra/: eks-with-ecr.yaml
notebook/: test.ipynb
prod_assistant/config/: config.yaml
prod_assistant/etl/: data_ingestion.py  data_scrapper.py
prod_assistant/mcp_servers/: client.py  product_search_server.py
prod_assistant/retreiver/: retreival.py  retreivel.py
prod_assistant/router/: main.py
prod_assistant/utils/: model_loader.py
prod_assistant/workflow/: agentic_rag_workflow.py  agentic_workflow_with_mcp_websearch.py  normal_generation_workflow.py
templates/: chat.html  index.html
